responsive for tablet device

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       <section class="container">
         <div class="middle-section">
           <div class="button-board">
-            <button class="general-btn"><a class="gb-link" href="matchSchedule.html">Upcomming Match</a></button>
-            <button class="general-btn"><a class="gb-link" href="">All Group</a></button>
-            <button class="general-btn blog-btn"><a class="gb-link" href="index.html">Blog</a></button>
+            <div class="general-btn"><a class="gb-link" href="matchSchedule.html">Upcomming Match</a></div>
+            <div class="general-btn second-button"><a class="gb-link" href="">All Group</a></div>
+            <div class="general-btn blog-btn"><a class="gb-link" href="index.html">Blog</a></div>
           </div>
           <div class="transfer-blogs">
             <div class="transfer">
@@ -200,6 +200,7 @@
               </div>
             </div>
           </div>
+          <button class="view-all-btn">View All</button>
         </div>
       </section>
 
